--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-burger-menu": "^2.6.11",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
+    "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
