--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-pose": "^4.0.8",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "sequelize": "^5.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
