--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mysql2": "^1.6.5",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
+    "react-color": "^2.17.3",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-pose": "^4.0.8",
