--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gsap": "^2.1.3",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "react": "^16.9.0",
