--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ yarn-error.log*
 
 #AWScli
 awscli-bundle/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
